PDFVectorImporter/qa_runs/20260329_205803/su_manual_probe/harness_debug_log.txt
START
payload=C:\1FC-PDFimporter\PDFVectorImporter\qa_runs\20260329_205803\su_manual_probe\payload.json
harness=C:\1FC-PDFimporter\PDFVectorImporter\adapters\sketchup_harness.rb
payload_exists=true
harness_exists=true
LOAD_ERROR: SyntaxError: C:/1FC-PDFimporter/PDFVectorImporter/adapters/sketchup_harness.rb:110: syntax error, unexpected keyword_rescue, expecting keyword_end
      rescue LoadError
            ^
C:/1FC-PDFimporter/PDFVectorImporter/adapters/sketchup_harness.rb:112: syntax error, unexpected keyword_rescue, expecting keyword_end
      rescue StandardError
            ^
C:/Users/Rowdy Payton/AppData/Roaming/SketchUp/SketchUp 2017/SketchUp/Plugins/zz_probe_harness_debug.rb:9:in `load'
C:/Users/Rowdy Payton/AppData/Roaming/SketchUp/SketchUp 2017/SketchUp/Plugins/zz_probe_harness_debug.rb:9:in `<top (required)>'
